fix search result image distortion

--- a/stylesheets/search.css
+++ b/stylesheets/search.css
@@ -16,4 +16,10 @@
 .searchResult > img {
     border-radius: 32px;
     background-color: #0d21a109;
+    height: 200px;
+    width: 200px;
+}
+
+h2 {
+    margin-top: 0px;
 }
